# poetry2nix

./: flake.nix  mk-poetry-dep.nix
.github/workflows/: ci.yml
nix/: sources.json
overrides/: build-systems.json  default.nix
tests/: default.nix
tests/ml-stack/: pyproject.toml
tests/orjson-test/: default.nix
tests/tantivy/: default.nix  pyproject.toml
